# rl-research

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  baselines.json  baselines_hard.json  harness.py  panel.md  prior_attempts.md  program.md  pyproject.toml  run_panel.py  train.py
.claude/agents/: curator.md  engineer.md  researcher.md  reviewer.md
.claude/commands/: curate.md  iterate.md  research.md
baselines/: __init__.py  count_bonus.py  eps_greedy_q.py  random.py
docs/: README.md  benchmarks.md  charter.md  contract.md  loop.md  operations.md  sota.md
docs/roles/: curator.md  engineer.md  operator.md  researcher.md  reviewer.md
docs/superpowers/specs/: 2026-05-16-claude-code-harness-design.md
lab/: CORPUS_STATS.md  lessons.md  result.schema.json
lab/baselines/: README.md  random.json
lab/runs/: README.md
lab/templates/: hypothesis.md  train.py
lab/threads/: README.md
scripts/: baseline_monitor.sh  build_baselines.py  build_baselines_hard.py  corpus_stats.py  ledger_backup.sh  loop.sh  next_run_id.py  preflight.sh  run_probe_ladder.py  status.sh  validate_candidate.py
src/rl_research/: __init__.py  checkpoints.py  contract.py  envs.py  evaluate.py  run_monitor.py  runtime.py  tb.py
src/rl_research/baselines/: __init__.py  ppo.py
tests/: smoke_test.py  test_candidate_schema.py  test_checkpoints.py  test_contract.py  test_contract_concurrency.py  test_corpus_stats.py  test_envs.py  test_evaluate.py  test_harness.py  test_preflight.py  test_probe_ladder.py  test_run_monitor.py  test_run_panel.py  test_runtime.py  test_tb.py
worklogs/: README.md  TEMPLATE.md  exemplars.md  ledger.jsonl  research_attemps_20260526.md  research_attempts_20260524.md
worklogs/_archive/candidates/: cid-channel-imminence-differential.md  cwai-channel-wise-action-influence.md  jfp-jacobian-firing-phase.md  ksv-kernel-smoothed-suffix-pair-vote.md  ktac-kendall-tau-action-concordance.md  ptw-prefix-witness-trie.md  rsd-reconvergent-segment-dominance.md  sds-stochastic-dominance-sketches.md  sit-suffix-inheritance-trie.md
worklogs/attempts/: 01-frost.md  02-bric.md  03-kernel-rl.md  04-carl-frontier-graph.md  05-bce-v0.md  06-t-ctbp.md  07-order-projection.md  08-eop-cop.md  09-causal-dominance.md  10-value-reset.md  11-top.md  12-policy-edit-optimization.md  13-etb-hpc.md  14-primal-behavior-flow.md  15-fed-frontier-expanding-dispersion.md  16-picav-path-integrated-channel-asymmetry-voting.md  17-chx-cumulant-hull-extremality.md  18-cec-continuation-endpoint-concordance.md  19-cwtp-confluence-witness-trajectory-pairs.md  20-lra-loop-return-aversion.md  21-tpp-terminal-postfix-pairing.md  22-crp-channel-rank-position-concordance.md  23-tcp-temporal-channel-precedence.md  24-pcr-policy-commitment-recovery.md  25-acs-action-conditional-suffix-spectrum.md  26-trac-transition-refractive-action-channels.md  27-pcga-per-channel-gradient-alignment.md  28-arp-action-reachable-pattern-lattice.md  29-pfa-per-channel-phase-flow-asymmetry.md  30-cpr-channel-posterior-chebyshev-reweight.md  31-atp-action-tangent-persistence.md  32-csd-channel-conditional-successor-disagreement.md  33-acfc-action-frequency-channel-frequency-concordance.md  34-accd-action-conditional-channel-dissociation.md  35-phi-path-homology-invariants.md  36-prar-policy-regime-antisymmetric-residual.md  37-hrc-horizon-recursive-concordance.md  38-csa-channel-spectral-action-influence.md  39-blic-block-lookback-imminence-concordance.md  40-cbi-negative-closure.md  (+1 more)
worklogs/candidates/: dpc-divergent-prefix-concordance.md  fftv-first-firing-time-variance-lattice.md  tpm-trajectory-pair-mass-transport.md  vcc-vector-cumulant-confluence.md
worklogs/runs/20260605-02-auto/: curator.md  hypothesis.md  panel.txt  result.json  review.md  train.py
worklogs/runs/20260605-03-auto/: curator.md  hypothesis.md  panel.txt  result.json  review.md  train.py
worklogs/runs/20260605-04-auto/: curator.md  hypothesis.md  panel.txt  result.json  review.md  train.py
worklogs/runs/20260605-05-auto/: curator.md  hypothesis.md  panel.txt  result.json  review.md  train.py
worklogs/runs/20260605-06-auto/: curator.md  hypothesis.md  panel.txt  result.json  review.md  train.py
worklogs/runs/20260605-07-auto/: curator.md  hypothesis.md  panel.txt  result.json  review.md  train.py
worklogs/runs/20260605-08-auto/: curator.md  hypothesis.md  panel.txt  result.json  (+2 more)
(+334 files in other folders)
