[project]
name = "rl-research"
version = "0.3.0"
description = "Lean harness for fast RL research probes."
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy==2.4.4",
    "torch==2.11.0",
    "gymnasium[classic-control]==1.3.0",
    "minigrid==2.3.1",
    "mo-gymnasium==1.3.2",
    "craftax==1.5.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.12",
    "pytest==9.0.3",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["worklogs"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "NPY", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore:pkg_resources is deprecated.*:UserWarning",
    "ignore:.*Overriding environment.*:UserWarning",
    "ignore:.*Box .*precision lowered.*:UserWarning",
    "ignore:.*reward returned by `step\\(\\)`.*:UserWarning",
    "ignore:JAX plugin .* is installed, but it is not compatible.*:RuntimeWarning",
]
